[package]
name = "bae_types"
description = "The common types used throughout the Broad Audio Engine."
repository = "https://github.com/ChylerDev/BAE_Types"
license = "MIT"
version = "0.14.1" # don't forget to fix version numbers in README.md documentation links
authors = ["Chyler Morrison <contact@chyler.info>"]
edition = "2018"
keywords = [ "audio", "audio-processing" ]
categories = [ "multimedia::audio" ]

[badges]
is-it-maintained-issue-resolution = { repository = "ChylerDev/BAE" }
is-it-maintained-open-issues = { repository = "ChylerDev/BAE" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
version-sync = "0.9"
